Fixed distorted box layout in low screen size devices

--- a/cs50w-project0/style.css
+++ b/cs50w-project0/style.css
@@ -39,6 +39,12 @@ div>[class*="col- col-sm- col-md- col-lg-"] {
     }
 }
 
+@media screen and (min-width: 480px) {
+    .component-image {
+        height: 100vh;
+    }
+}
+
 .content {
     border: 2px solid red;
     margin: auto;
